@@ -22,5 +22,8 @@ fixtures:
       repo: https://github.com/simp/puppet-systemd
       branch: simp-master
     tcpwrappers: https://github.com/simp/pupmod-simp-tcpwrappers
+    vox_selinux:
+      repo: https://github.com/simp/pupmod-voxpupuli-selinux
+      branch: simp-master
   symlinks:
     rsync: "#{source_dir}"
