@@ -32,6 +32,10 @@
     {
       "name": "simp/stunnel",
       "version_requirement": ">= 6.0.0 < 7.0.0"
+    },
+    {
+      "name": "simp/vox_selinux",
+      "version_requirement": ">= 1.5.2 < 2.0.0"
     }
   ],
   "operatingsystem_support": [
