@@ -3,8 +3,7 @@ t_result = Array.new
 
 if @user_pass
 
-  Array(@user_pass).each do |pair|
-
+  @user_pass.each do |pair|
     if pair.include?(':')
       t_result.push(pair)
     end
