@@ -1,3 +1,9 @@
+* Wed Feb 20 2019 Adam Yohring <adam.yohrling@onyxpoint.com> - 6.1.1-0
+- Modified class to support configuring SIMP rsync server and SIMP
+  rsync client for same machine
+- Combine `rsync::server::global` with `rsync::server`
+- Add ability to use ports in rsync_server parameter
+
 * Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
 - Fixed a template bug that prevented catalogue compilation when
   rsync::server::section::user_pass was set
